trying to fix horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html{
     line-height: 15px;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
 body{
     margin:0;
